# hydrolib

./: .bumpversion.cfg  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
_del/: bulletin17c.py  core.py
app/: ffa_export.py  ffa_runner.py  requirements.txt  streamlit_app.py
build_fortran/: _emafort.pyf  build.py
data/: gage_attributes.csv
docs/: vignette_cli.md  vignette_jupyter.md  vignette_streamlit_local.md  vignette_streamlit_web.md
examples/: Interactive-1.ipynb  basic_analysis.py  complete_example.py  complete_example_01.py  daily_flow_plots_ex01.py  flood_frequency_analysis.ipynb  santa_anna_17c_plot_01
hydrolib/: README.md  __init__.py  batch.py  bulletin17c.py  cli.py  core.py  engine.py  freq_plot.py  hydrograph.py  plots.py  report.py  setup.py  usgs.py
hydrolib/peakfqr/: __init__.py  _emafort.cp312-win_amd64.pyd
hydrolib/peakfqsa/: __init__.py  config.py  io_converters.py  parsers.py  validators.py  wrapper.py
hydrolib/regression/: __init__.py  basin_chars.py  comparator.py  region.py  regression_table.py  roi_analysis.py  sir2024_5130.py
hydrolib/validation/: __init__.py  benchmarks.py  comparisons.py  reports.py
tests/: test_bulletin17c.py  test_ffa_export.py  test_ffa_runner.py  test_freq_plot.py
tests/integration/: test_hybrid_workflow.py
tests/peakfqsa/: test_config.py  test_io_converters.py  test_parsers.py  test_r_fixtures.py  test_wrapper.py
tests/regression/: __init__.py  test_comparator.py  test_gls_equations.py  test_roi_analysis.py
tests/validation/: test_benchmarks.py  (+1 more)
(+11 files in other folders)
